@@ -21,6 +21,9 @@
 *
 * This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
+
+require_once(t3lib_extMgm::extPath('oelib') . 'class.tx_oelib_Autoloader.php');
+
 /**
  * Class 'frontEndDetailView for the 'bzdstaffdirectory' extension.
  *
