@@ -1,4 +1,5 @@
 version 0.8.0 - currently working on
+- [#2523] Change: Make use of the oelib AutoLoader consistent
 - [#2719] Feature: Additional fields for nickname and mobile phone number
 - [#2780] Change: In grouped list view title is linked to detail view too
 - [#2567] Fix: SQL errors in the box view when having no persons selected
